2025-10-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region):
	* tramp-cache.el (tramp-flush-file-upper-properties):
	* tramp-sh.el (tramp-sh-handle-insert-directory): Use `when-let*'
	consequently.

	* tramp-cmds.el (tramp-file-name-with-method): Add :initialize and
	:set functions.
	(tramp-set-file-name-with-method): New defun.
	(with-tramp-file-name-with-method): Filter out enabled methods.

	* tramp-compat.el: Add TODO.

2025-10-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Adapt docstring.

	* tramp-cmds.el (tramp-file-name-with-method): Add "surs" and
	"sudors" to :type.  Adapt :version.

	* tramp-sh.el (tramp-enable-surs-method)
	(tramp-enable-sudors-method): New defuns
	(tramp-sh-handle-expand-file-name): Add "surs" and "sudors" in check.

2025-10-14  Michael Albinus  <michael.albinus@gmx.de>

	Do not use the ;;;###tramp-autoload cookie for defcustoms.  This
	damages the customisation when Tramp is autoloaded.  Reported by
	Joel Reicher <joel.reicher@gmail.com>.

	* tramp-cache.el (tramp-verbose): Declare.
	(tramp-connection-properties):
	* tramp-message.el (tramp-verbose):
	Remove ;;;###tramp-autoload cookie.

2025-10-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-make-tramp-file-name): Do not use the hop for
	the "archive" method.

2025-10-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive.el (tramp-archive-file-name-handler): Move bindings
	of `tramp-methods' and `tramp-gvfs-methods' up.
	(tramp-archive-file-name-handler): Do not use
	`tramp-archive-run-real-handler' for testing existence of
	`archive'.  (Bug#79582)

2025-10-01  Renato Ferreira  <renatofdds@gmail.com>  (tiny change)

	* tramp.el (tramp-process-running-p): Use 'compare-strings'
	for matching PROCESS-NAME with process command.  (Bug#79545)

2025-09-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0.3 released

2025-09-17  Michael Albinus  <michael.albinus@gmx.de>
