@@ -1,3 +1,10 @@
+2025-10-25  Stephen Berman  <stephen.berman@gmx.net>
+
+	Fix Tramp support of GVFS built without FUSE
+
+	* tramp-gvfs.el (tramp-gvfs-enabled): Add check for running
+	process "gvfsd", since GVFS may be built without FUSE.
+
 2025-10-20  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-skeleton-write-region):
